--- a/covid19-zip.ipynb
+++ b/covid19-zip.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 153,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,25 +20,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_csv('csse_covid_19_data/csse_covid_19_time_series/time_series_19-covid-Confirmed.csv')"
+    "df = pd.read_csv('covid_data/csse_covid_19_data/csse_covid_19_time_series/time_series_19-covid-Confirmed.csv')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(406, 55)"
+       "(421, 56)"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -84,7 +84,6 @@
        "      <th>1/26/20</th>\n",
        "      <th>1/27/20</th>\n",
        "      <th>...</th>\n",
-       "      <th>3/3/20</th>\n",
        "      <th>3/4/20</th>\n",
        "      <th>3/5/20</th>\n",
        "      <th>3/6/20</th>\n",
@@ -94,6 +93,7 @@
        "      <th>3/10/20</th>\n",
        "      <th>3/11/20</th>\n",
        "      <th>3/12/20</th>\n",
+       "      <th>3/13/20</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -111,7 +111,6 @@
        "      <td>8</td>\n",
        "      <td>...</td>\n",
        "      <td>43</td>\n",
-       "      <td>43</td>\n",
        "      <td>47</td>\n",
        "      <td>48</td>\n",
        "      <td>50</td>\n",
@@ -120,6 +119,7 @@
        "      <td>53</td>\n",
        "      <td>59</td>\n",
        "      <td>70</td>\n",
+       "      <td>75</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -134,7 +134,6 @@
        "      <td>4</td>\n",
        "      <td>4</td>\n",
        "      <td>...</td>\n",
-       "      <td>293</td>\n",
        "      <td>331</td>\n",
        "      <td>360</td>\n",
        "      <td>420</td>\n",
@@ -144,6 +143,7 @@
        "      <td>581</td>\n",
        "      <td>639</td>\n",
        "      <td>639</td>\n",
+       "      <td>701</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -159,7 +159,6 @@
        "      <td>5</td>\n",
        "      <td>...</td>\n",
        "      <td>110</td>\n",
-       "      <td>110</td>\n",
        "      <td>117</td>\n",
        "      <td>130</td>\n",
        "      <td>138</td>\n",
@@ -168,6 +167,7 @@
        "      <td>160</td>\n",
        "      <td>178</td>\n",
        "      <td>178</td>\n",
+       "      <td>200</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -206,7 +206,6 @@
        "      <td>4</td>\n",
        "      <td>4</td>\n",
        "      <td>...</td>\n",
-       "      <td>36</td>\n",
        "      <td>50</td>\n",
        "      <td>50</td>\n",
        "      <td>83</td>\n",
@@ -216,10 +215,11 @@
        "      <td>129</td>\n",
        "      <td>149</td>\n",
        "      <td>149</td>\n",
+       "      <td>197</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>5 rows × 55 columns</p>\n",
+       "<p>5 rows × 56 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -230,24 +230,24 @@
        "3            NaN          Nepal  28.1667   84.2500        0        0        0   \n",
        "4            NaN       Malaysia   2.5000  112.5000        0        0        0   \n",
        "\n",
-       "   1/25/20  1/26/20  1/27/20   ...     3/3/20  3/4/20  3/5/20  3/6/20  3/7/20  \\\n",
-       "0        7        8        8   ...         43      43      47      48      50   \n",
-       "1        2        4        4   ...        293     331     360     420     461   \n",
-       "2        3        4        5   ...        110     110     117     130     138   \n",
+       "   1/25/20  1/26/20  1/27/20   ...     3/4/20  3/5/20  3/6/20  3/7/20  3/8/20  \\\n",
+       "0        7        8        8   ...         43      47      48      50      50   \n",
+       "1        2        4        4   ...        331     360     420     461     502   \n",
+       "2        3        4        5   ...        110     117     130     138     150   \n",
        "3        1        1        1   ...          1       1       1       1       1   \n",
-       "4        3        4        4   ...         36      50      50      83      93   \n",
+       "4        3        4        4   ...         50      50      83      93      99   \n",
        "\n",
-       "   3/8/20  3/9/20  3/10/20  3/11/20  3/12/20  \n",
-       "0      50      50       53       59       70  \n",
-       "1     502     511      581      639      639  \n",
-       "2     150     150      160      178      178  \n",
-       "3       1       1        1        1        1  \n",
-       "4      99     117      129      149      149  \n",
+       "   3/9/20  3/10/20  3/11/20  3/12/20  3/13/20  \n",
+       "0      50       53       59       70       75  \n",
+       "1     511      581      639      639      701  \n",
+       "2     150      160      178      178      200  \n",
+       "3       1        1        1        1        1  \n",
+       "4     117      129      149      149      197  \n",
        "\n",
-       "[5 rows x 55 columns]"
+       "[5 rows x 56 columns]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -258,7 +258,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -267,16 +267,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(243, 55)"
+       "(244, 56)"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -287,7 +287,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -296,7 +296,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -305,16 +305,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(893, 6)"
+       "(945, 6)"
       ]
      },
-     "execution_count": 140,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -325,7 +325,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -334,7 +334,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -377,7 +377,7 @@
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>433</th>\n",
+       "      <th>434</th>\n",
        "      <td>King County, WA</td>\n",
        "      <td>US</td>\n",
        "      <td>47.6062</td>\n",
@@ -386,7 +386,7 @@
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>676</th>\n",
+       "      <th>678</th>\n",
        "      <td>King County, WA</td>\n",
        "      <td>US</td>\n",
        "      <td>47.6062</td>\n",
@@ -395,7 +395,7 @@
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>677</th>\n",
+       "      <th>679</th>\n",
        "      <td>Cook County, IL</td>\n",
        "      <td>US</td>\n",
        "      <td>41.7377</td>\n",
@@ -404,7 +404,7 @@
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>919</th>\n",
+       "      <th>922</th>\n",
        "      <td>King County, WA</td>\n",
        "      <td>US</td>\n",
        "      <td>47.6062</td>\n",
@@ -419,13 +419,13 @@
       "text/plain": [
        "      Province/State Country/Region      Lat      Long   period  case_counts\n",
        "190  King County, WA             US  47.6062 -122.3321  1/22/20            1\n",
-       "433  King County, WA             US  47.6062 -122.3321  1/23/20            1\n",
-       "676  King County, WA             US  47.6062 -122.3321  1/24/20            1\n",
-       "677  Cook County, IL             US  41.7377  -87.6976  1/24/20            1\n",
-       "919  King County, WA             US  47.6062 -122.3321  1/25/20            1"
+       "434  King County, WA             US  47.6062 -122.3321  1/23/20            1\n",
+       "678  King County, WA             US  47.6062 -122.3321  1/24/20            1\n",
+       "679  Cook County, IL             US  41.7377  -87.6976  1/24/20            1\n",
+       "922  King County, WA             US  47.6062 -122.3321  1/25/20            1"
       ]
      },
-     "execution_count": 119,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -454,7 +454,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -463,7 +463,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -573,7 +573,7 @@
        "4                           1  41.194129,-91.98027  "
       ]
      },
-     "execution_count": 121,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -633,7 +633,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -642,7 +642,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 142,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -671,7 +671,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 143,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -701,16 +701,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 147,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(38569563, 15)"
+       "(40815495, 15)"
       ]
      },
-     "execution_count": 147,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -721,7 +721,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 148,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -880,7 +880,7 @@
        "4                           1  41.194129,-91.98027  "
       ]
      },
-     "execution_count": 148,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -922,30 +922,15 @@
    "source": []
   },
   {
-   "cell_type": "code",
-   "execution_count": 155,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "TypeError",
-     "evalue": "cannot convert the series to <class 'float'>",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-155-e2b85ecbca37>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mdf4\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'distance'\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mmath\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msqrt\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mpow\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdf4\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'Lat'\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m-\u001b[0m \u001b[0mdf4\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'Latitude'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m2\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0mpow\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdf4\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'Long'\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m-\u001b[0m \u001b[0mdf4\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'Longitude'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m2\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;32m~/anaconda3/lib/python3.6/site-packages/pandas/core/series.py\u001b[0m in \u001b[0;36mwrapper\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m    115\u001b[0m             \u001b[0;32mreturn\u001b[0m \u001b[0mconverter\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0miloc\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    116\u001b[0m         raise TypeError(\"cannot convert the series to \"\n\u001b[0;32m--> 117\u001b[0;31m                         \"{0}\".format(str(converter)))\n\u001b[0m\u001b[1;32m    118\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    119\u001b[0m     \u001b[0;32mreturn\u001b[0m \u001b[0mwrapper\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mTypeError\u001b[0m: cannot convert the series to <class 'float'>"
-     ]
-    }
-   ],
    "source": [
     "df4['distance'] = math.sqrt(pow(df4['Lat'] - df4['Latitude'], 2) + pow(df4['Long'] - df4['Longitude'], 2))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 157,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -954,7 +939,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 168,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -963,16 +948,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 169,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(522407, 16)"
+       "(547023, 16)"
       ]
      },
-     "execution_count": 169,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1003,11 +988,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 171,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df5.to_csv('zipaffected.csv')"
+    "df5.to_csv('zipaffected_0313.csv')"
    ]
   }
  ],
