add parameter (file name) and date the script run

--- a/covid19-zip.ipynb
+++ b/covid19-zip.ipynb
@@ -8,7 +8,34 @@
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
-    "import math"
+    "import math\n",
+    "from datetime import date\n",
+    "from datetime import datetime"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#set file name"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "filename = 'Confirmed'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dt = datetime.now().strftime('%Y%m%d')"
    ]
   },
   {
@@ -20,16 +47,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_csv('covid_data/csse_covid_19_data/csse_covid_19_time_series/time_series_19-covid-Confirmed.csv')"
+    "df = pd.read_csv('covid_data/csse_covid_19_data/csse_covid_19_time_series/time_series_19-covid-' + filename + '.csv')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -38,7 +65,7 @@
        "(421, 56)"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -325,11 +352,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df3.to_csv('CleanCaseCt.csv')"
+    "df3.to_csv('Clean_' + filename + '_' + dt + '.csv')"
    ]
   },
   {
@@ -968,16 +995,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 170,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(38569563, 16)"
+       "(40815495, 16)"
       ]
      },
-     "execution_count": 170,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -987,12 +1014,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df5.to_csv('zipaffected_0313.csv')"
+    "df5.to_csv('zipaffected_' + filename + '_' + dt + '.csv')"
    ]
   }
  ],
