update script to include country as parameter

--- a/covid19-zip.ipynb
+++ b/covid19-zip.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,21 +17,23 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#set file name  - Confirmed, Deaths, Recovered"
+    "# set file name  - Confirmed, Deaths, Recovered\n",
+    "# set country of interest"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
-    "filename = 'Confirmed'"
+    "filename = 'Confirmed'\n",
+    "country = 'US'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -65,7 +67,7 @@
        "(450, 58)"
       ]
      },
-     "execution_count": 100,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -76,234 +78,75 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Province/State</th>\n",
-       "      <th>Country/Region</th>\n",
-       "      <th>Lat</th>\n",
-       "      <th>Long</th>\n",
-       "      <th>1/22/20</th>\n",
-       "      <th>1/23/20</th>\n",
-       "      <th>1/24/20</th>\n",
-       "      <th>1/25/20</th>\n",
-       "      <th>1/26/20</th>\n",
-       "      <th>1/27/20</th>\n",
-       "      <th>...</th>\n",
-       "      <th>3/6/20</th>\n",
-       "      <th>3/7/20</th>\n",
-       "      <th>3/8/20</th>\n",
-       "      <th>3/9/20</th>\n",
-       "      <th>3/10/20</th>\n",
-       "      <th>3/11/20</th>\n",
-       "      <th>3/12/20</th>\n",
-       "      <th>3/13/20</th>\n",
-       "      <th>3/14/20</th>\n",
-       "      <th>3/15/20</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>NaN</td>\n",
-       "      <td>Thailand</td>\n",
-       "      <td>15.0000</td>\n",
-       "      <td>101.0000</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>NaN</td>\n",
-       "      <td>Japan</td>\n",
-       "      <td>36.0000</td>\n",
-       "      <td>138.0000</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>6</td>\n",
-       "      <td>6</td>\n",
-       "      <td>6</td>\n",
-       "      <td>10</td>\n",
-       "      <td>10</td>\n",
-       "      <td>15</td>\n",
-       "      <td>16</td>\n",
-       "      <td>19</td>\n",
-       "      <td>22</td>\n",
-       "      <td>22</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>NaN</td>\n",
-       "      <td>Singapore</td>\n",
-       "      <td>1.2833</td>\n",
-       "      <td>103.8333</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>NaN</td>\n",
-       "      <td>Nepal</td>\n",
-       "      <td>28.1667</td>\n",
-       "      <td>84.2500</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>NaN</td>\n",
-       "      <td>Malaysia</td>\n",
-       "      <td>2.5000</td>\n",
-       "      <td>112.5000</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>5 rows × 58 columns</p>\n",
-       "</div>"
-      ],
       "text/plain": [
-       "  Province/State Country/Region      Lat      Long  1/22/20  1/23/20  1/24/20  \\\n",
-       "0            NaN       Thailand  15.0000  101.0000        0        0        0   \n",
-       "1            NaN          Japan  36.0000  138.0000        0        0        0   \n",
-       "2            NaN      Singapore   1.2833  103.8333        0        0        0   \n",
-       "3            NaN          Nepal  28.1667   84.2500        0        0        0   \n",
-       "4            NaN       Malaysia   2.5000  112.5000        0        0        0   \n",
-       "\n",
-       "   1/25/20  1/26/20  1/27/20   ...     3/6/20  3/7/20  3/8/20  3/9/20  \\\n",
-       "0        0        0        0   ...          1       1       1       1   \n",
-       "1        0        0        0   ...          6       6       6      10   \n",
-       "2        0        0        0   ...          0       0       0       0   \n",
-       "3        0        0        0   ...          0       0       0       0   \n",
-       "4        0        0        0   ...          0       0       0       0   \n",
-       "\n",
-       "   3/10/20  3/11/20  3/12/20  3/13/20  3/14/20  3/15/20  \n",
-       "0        1        1        1        1        1        1  \n",
-       "1       10       15       16       19       22       22  \n",
-       "2        0        0        0        0        0        0  \n",
-       "3        0        0        0        0        0        0  \n",
-       "4        0        0        0        0        0        0  \n",
-       "\n",
-       "[5 rows x 58 columns]"
+       "array(['Thailand', 'Japan', 'Singapore', 'Nepal', 'Malaysia', 'Canada',\n",
+       "       'Australia', 'Cambodia', 'Sri Lanka', 'Germany', 'Finland',\n",
+       "       'United Arab Emirates', 'Philippines', 'India', 'Italy', 'Sweden',\n",
+       "       'Spain', 'Belgium', 'Egypt', 'Lebanon', 'Iraq', 'Oman',\n",
+       "       'Afghanistan', 'Bahrain', 'Kuwait', 'Algeria', 'Croatia',\n",
+       "       'Switzerland', 'Austria', 'Israel', 'Pakistan', 'Brazil',\n",
+       "       'Georgia', 'Greece', 'North Macedonia', 'Norway', 'Romania',\n",
+       "       'Estonia', 'Netherlands', 'San Marino', 'Belarus', 'Iceland',\n",
+       "       'Lithuania', 'Mexico', 'New Zealand', 'Nigeria', 'Ireland',\n",
+       "       'Luxembourg', 'Monaco', 'Qatar', 'Ecuador', 'Azerbaijan',\n",
+       "       'Armenia', 'Dominican Republic', 'Indonesia', 'Portugal',\n",
+       "       'Andorra', 'Latvia', 'Morocco', 'Saudi Arabia', 'Senegal',\n",
+       "       'Argentina', 'Chile', 'Jordan', 'Ukraine', 'Hungary',\n",
+       "       'Liechtenstein', 'Poland', 'Tunisia', 'Bosnia and Herzegovina',\n",
+       "       'Slovenia', 'South Africa', 'Bhutan', 'Cameroon', 'Colombia',\n",
+       "       'Costa Rica', 'Peru', 'Serbia', 'Slovakia', 'Togo', 'Malta',\n",
+       "       'Martinique', 'Bulgaria', 'Maldives', 'Bangladesh', 'Paraguay',\n",
+       "       'Albania', 'Cyprus', 'Brunei', 'US', 'Burkina Faso', 'Holy See',\n",
+       "       'Mongolia', 'Panama', 'China', 'Iran', 'Korea, South', 'France',\n",
+       "       'Cruise Ship', 'Denmark', 'Czechia', 'Taiwan*', 'Vietnam',\n",
+       "       'Russia', 'Moldova', 'Bolivia', 'Honduras', 'United Kingdom',\n",
+       "       'Congo (Kinshasa)', \"Cote d'Ivoire\", 'Jamaica', 'Reunion',\n",
+       "       'Turkey', 'Cuba', 'Guyana', 'Kazakhstan', 'Cayman Islands',\n",
+       "       'Guadeloupe', 'Ethiopia', 'Sudan', 'Guinea', 'Aruba', 'Kenya',\n",
+       "       'Antigua and Barbuda', 'Uruguay', 'Ghana', 'Jersey', 'Namibia',\n",
+       "       'Seychelles', 'Trinidad and Tobago', 'Venezuela', 'Curacao',\n",
+       "       'Eswatini', 'Gabon', 'Guatemala', 'Guernsey', 'Mauritania',\n",
+       "       'Rwanda', 'Saint Lucia', 'Saint Vincent and the Grenadines',\n",
+       "       'Suriname', 'occupied Palestinian territory', 'Kosovo',\n",
+       "       'Central African Republic', 'Congo (Brazzaville)',\n",
+       "       'Equatorial Guinea', 'Uzbekistan'], dtype=object)"
       ]
      },
-     "execution_count": 101,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df.head(5)"
+    "df['Country/Region'].unique()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df1 = df[df['Country/Region'] == 'US']"
+    "df1 = df[df['Country/Region'] == country]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(247, 58)"
+       "(1, 58)"
       ]
      },
-     "execution_count": 103,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -314,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -323,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -332,16 +175,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(74, 6)"
+       "(24, 6)"
       ]
      },
-     "execution_count": 106,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -352,16 +195,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df3.to_csv('Clean_' + filename + '_' + dt + '.csv')"
+    "df3.to_csv('Clean_' + country + '_' + filename + '_' + dt + '.csv')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -395,71 +238,64 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>9576</th>\n",
-       "      <td>King County, WA</td>\n",
-       "      <td>US</td>\n",
-       "      <td>47.6062</td>\n",
-       "      <td>-122.3321</td>\n",
-       "      <td>2/29/20</td>\n",
+       "      <th>30</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Italy</td>\n",
+       "      <td>43.0</td>\n",
+       "      <td>12.0</td>\n",
+       "      <td>2/21/20</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>9823</th>\n",
-       "      <td>King County, WA</td>\n",
-       "      <td>US</td>\n",
-       "      <td>47.6062</td>\n",
-       "      <td>-122.3321</td>\n",
-       "      <td>3/1/20</td>\n",
-       "      <td>1</td>\n",
+       "      <th>31</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Italy</td>\n",
+       "      <td>43.0</td>\n",
+       "      <td>12.0</td>\n",
+       "      <td>2/22/20</td>\n",
+       "      <td>2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>10064</th>\n",
-       "      <td>Snohomish County, WA</td>\n",
-       "      <td>US</td>\n",
-       "      <td>48.0330</td>\n",
-       "      <td>-121.8339</td>\n",
-       "      <td>3/2/20</td>\n",
-       "      <td>1</td>\n",
+       "      <th>32</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Italy</td>\n",
+       "      <td>43.0</td>\n",
+       "      <td>12.0</td>\n",
+       "      <td>2/23/20</td>\n",
+       "      <td>3</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>10070</th>\n",
-       "      <td>King County, WA</td>\n",
-       "      <td>US</td>\n",
-       "      <td>47.6062</td>\n",
-       "      <td>-122.3321</td>\n",
-       "      <td>3/2/20</td>\n",
-       "      <td>5</td>\n",
+       "      <th>33</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Italy</td>\n",
+       "      <td>43.0</td>\n",
+       "      <td>12.0</td>\n",
+       "      <td>2/24/20</td>\n",
+       "      <td>7</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>10311</th>\n",
-       "      <td>Snohomish County, WA</td>\n",
-       "      <td>US</td>\n",
-       "      <td>48.0330</td>\n",
-       "      <td>-121.8339</td>\n",
-       "      <td>3/3/20</td>\n",
-       "      <td>1</td>\n",
+       "      <th>34</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Italy</td>\n",
+       "      <td>43.0</td>\n",
+       "      <td>12.0</td>\n",
+       "      <td>2/25/20</td>\n",
+       "      <td>10</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "             Province/State Country/Region      Lat      Long   period  \\\n",
-       "9576        King County, WA             US  47.6062 -122.3321  2/29/20   \n",
-       "9823        King County, WA             US  47.6062 -122.3321   3/1/20   \n",
-       "10064  Snohomish County, WA             US  48.0330 -121.8339   3/2/20   \n",
-       "10070       King County, WA             US  47.6062 -122.3321   3/2/20   \n",
-       "10311  Snohomish County, WA             US  48.0330 -121.8339   3/3/20   \n",
-       "\n",
-       "       case_counts  \n",
-       "9576             1  \n",
-       "9823             1  \n",
-       "10064            1  \n",
-       "10070            5  \n",
-       "10311            1  "
+       "   Province/State Country/Region   Lat  Long   period  case_counts\n",
+       "30            NaN          Italy  43.0  12.0  2/21/20            1\n",
+       "31            NaN          Italy  43.0  12.0  2/22/20            2\n",
+       "32            NaN          Italy  43.0  12.0  2/23/20            3\n",
+       "33            NaN          Italy  43.0  12.0  2/24/20            7\n",
+       "34            NaN          Italy  43.0  12.0  2/25/20           10"
       ]
      },
-     "execution_count": 108,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -469,22 +305,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 23,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'/Users/hong/Workspace/github/COVID-19'"
-      ]
-     },
-     "execution_count": 23,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": []
+   "source": [
+    "# Local level"
+   ]
   },
   {
    "cell_type": "code",
@@ -623,26 +448,6 @@
     "zipcode Lat Long data from\n",
     "https://public.opendatasoft.com/explore/dataset/us-zip-code-latitude-and-longitude/export/\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 136,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/hong/anaconda3/lib/python3.6/site-packages/ipykernel_launcher.py:1: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-      "Try using .loc[row_indexer,col_indexer] = value instead\n",
-      "\n",
-      "See the caveats in the documentation: http://pandas.pydata.org/pandas-docs/stable/indexing.html#indexing-view-versus-copy\n",
-      "  \"\"\"Entry point for launching an IPython kernel.\n"
-     ]
-    }
-   ],
-   "source": []
   },
   {
    "cell_type": "markdown",
@@ -924,38 +729,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 151,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 152,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(38569563, 15)"
-      ]
-     },
-     "execution_count": 152,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -1038,19 +811,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### National Level"
+    "# National Level"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1059,30 +825,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_national.to_csv(filename + \"_\" + dt + \"_national.csv\", header = True, index = True)"
+    "df_national.to_csv(country + '_' + filename + \"_\" + dt + \"_national.csv\", header = True, index = True)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 113,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'Deaths'"
-      ]
-     },
-     "execution_count": 113,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": []
   }
  ],
  "metadata": {
